spices/postgres/tests/errors/postgres-trows-row-mismatch.tur
;; U3 negative: a row-typed TRows of one column shape cannot be passed
;; where another column shape is expected. The phantom `cols` row makes
;; two results with different columns distinct types.
;;
;;   tur check -Xdata-literals tests/errors/postgres-trows-row-mismatch.tur
;;   => error [TUR-E0001]: type mismatch
;;        expected (TRows #row{id : int  name : cstr})
;;        got      (TRows #row{id : int  age : int})
;;
;; This is the U3 "negative fixture" deliverable for postgres -- the row
;; check is the guarantee, not the runtime behavior. Requires
;; `-Xdata-literals` for the concrete `#row{...}` literals (the
;; postgres/typed module itself is row-polymorphic and needs no flag).
;; Compile-fail fixture; the inline compile-fail harness is plan P5.
(defmodule postgres_trows_row_mismatch_test
  (export)
(import postgres/row   :refer [Rows])
(import postgres/typed :refer [TRows trows-of trow-get])

;; Mint a raw Rows without libpq so the fixture elaborates standalone.
(defn __mk-rows [h : int] : Rows ```c return (int64_t)h; ```)

;; Pinned to a {id, name} result row.
(defn read-user [r : (TRows #row{id : int  name : cstr})] : cstr
  (trow-get r 0 "name"))

(defn misuse [] : cstr
  ;; A {id, age} result -- wrong column row for read-user.
  (let [r  (__mk-rows 0)
        tr (:: (trows-of r) (TRows #row{id : int  age : int}))]
    (read-user tr)))   ;; ERROR TUR-E0001: row mismatch
) ;; end
